rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2008_Example3-ASN1-Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2008_Example3-ASN1-Module.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 35, column 2]
    │
    │ 
 35 │  octet3 Octet3 ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 36 │    CONTAINING{component1 '01010101'B, component2 '01010101'H, component3
 37 │               "component3"}
    │
────╯
