rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004-Amd1_ABC.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004-Amd1_ABC.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 17, column 2]
    │
    │ 
 15 │  /* For a Version 2 mapping, the last component of the module
 16 │  		      identifier would be version2(2) */
 17 │  Abc-elem ::= [NAME AS UNCAPITALIZED] Xyz-type ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
