rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004-Amd1_EXAMPLES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004-Amd1_EXAMPLES.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 15, column 2]
    │
    │ 
 13 │   /* For a Version 2 mapping, the last component of the module identifier would be version2(2) */
 15 │  EXAMPLES ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 16 │    personnelRecord       PersonnelRecord,
 17 │    number                Decimal,
 18 │    daysOfTheWeek         ListOfDays,
 19 │    namesOfMemberNations  NamesOfMemberNations,
 20 │    fileIdentifier-list
 21 │      [UNTAGGED] SEQUENCE (SIZE (1..MAX)) OF fileidentifier FileIdentifier
 22 │  }
    │
────╯
