rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004-Amd1_XSDv1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004-Amd1_XSDv1.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 77, column 11]
    │
    │ 
 77 │  (ALL EXCEPT (0 | MINUS-INFINITY | PLUS-INFINITY | NOT-A-NUMBER)) ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 79 │  /* xsd:double */
    │
────╯
