rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004-Amd1_XSDv2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004-Amd1_XSDv2.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 68, column 6]
    │
    │ 
 68 │      {TIME (SETTINGS "Basic=Date Date=YMD"), ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 69 │      VisibleString(FROM ("0".."9" | "DHMPSTY:.+-"))
 70 │        (CONSTRAINED BY { /* W3C XML Schema 1.0 Part 2, 3.2.9
 71 │                                     and used if a time-zone is present */
 72 │           })}
 74 │  /* xsd:dateTime */
    │
────╯
