rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004-Amd1_XYZ.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004-Amd1_XYZ.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 15, column 2]
    │
    │ 
 13 │  /* For a Version 2 mapping, the last component of the module
 14 │                      identifier would be version2(2) */
 15 │  Xyz-elem ::= [NAME AS UNCAPITALIZED] XSD.String ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
