rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004_EXAMPLES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004_EXAMPLES.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 14, column 29]
    │
    │ 
 09 │  -- Module EXAMPLES (X.694:01/2004)
 10 │  -- See also ITU-T X.694 (01/2004)
 11 │  -- See also the index of all ASN.1 assignments needed in this document
 13 │  EXAMPLES
 14 │  DEFINITIONS AUTOMATIC TAGS XER INSTRUCTIONS ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
