rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2004_XSD.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2004_XSD.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 129, column 6]
     │
     │ 
 129 │      (ALL EXCEPT (-0 | MINUS-INFINITY | PLUS-INFINITY| NOT-A-NUMBER)) ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 134 │  /* xsd:double */
     │
─────╯
